Ensure gap override is applied correctly

--- a/app/javascript/mastodon/components/account_header/styles.module.scss
+++ b/app/javascript/mastodon/components/account_header/styles.module.scss
@@ -264,8 +264,8 @@ $button-fallback-breakpoint: $button-breakpoint + 55px;
 }
 
 .numberFields {
-  @container (width > #{$button-breakpoint}) {
-    column-gap: 40px;
+  @container (width >= #{$button-breakpoint}) {
+    --number-fields-gap: 40px;
   }
 }
 
